--- a/package.json
+++ b/package.json
@@ -2,12 +2,15 @@
   "name": "admin-panel",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://justintopi.github.io/admin-panel-beta-version",
   "dependencies": {
+    "-": "^0.0.1",
     "@emotion/react": "^11.9.0",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.1.1",
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.1.3",
+    "gh-pages": "^3.2.3",
     "react": "^18.0.0",
     "react-bootstrap": "^2.3.0",
     "react-dom": "^18.0.0",
@@ -17,13 +20,16 @@
     "react-scripts": "5.0.1",
     "recharts": "^2.1.9",
     "sass": "^1.50.1",
+    "save-dev": "^0.0.1-security",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
